Add Create QR Code and Send Email For Group Invitee

--- a/SharijhaAward.Api/wwwroot/QREmail_ar.html
+++ b/SharijhaAward.Api/wwwroot/QREmail_ar.html
@@ -28,7 +28,7 @@
         />
       </header>
       <section>
-          أهلا بك $NewPersonalnvitee.Name$. <br />
+          أهلا بك $NewInvitee.Name$. <br />
           السلام عليكم و رحمة الله و بركاته<br />
           تم تأكيد تسجيلك لحضور: $EventEntity.ArabicName$ <br />
           المقر:$EventEntity.ArabicLocation$ <br />
