--- a/SharijhaAward.Api/wwwroot/QREmail_en.html
+++ b/SharijhaAward.Api/wwwroot/QREmail_en.html
@@ -28,7 +28,7 @@
         />
       </header>
       <section>
-          Welcome, $NewPersonalnvitee.Name$. <br />
+          Welcome, $NewInvitee.Name$. <br />
           Peace be upon you, <br />
           Registration for attendance has been confirmed: $EventEntity.EnglishName$ <br />
           Venue: $EventEntity.EnglishLocation$ <br />
