--- a/SharijhaAward.Api/wwwroot/QREmail_ar.html
+++ b/SharijhaAward.Api/wwwroot/QREmail_ar.html
@@ -50,11 +50,13 @@
             <td colspan="3"></td>
         </tr>
         <tr>
-            <img src="cid:BarCodeImage" style="margin-top: 4%; margin-bottom: 4%; align-self: center" />
+            <td colspan="3">
+                <img src="cid:BarCodeImage" style="margin-top: 4%; margin-bottom: 4%; align-self: center" />
+            </td>
         </tr>
 
-
-        <tr>
+        <!--here-->
+        <tr id="delete">
             <td style=" text-align: center; width: 50%;padding:15px" align="center">
                 <a href="$DownloadBarCodeAPI$" download="BarCode.png" style="
                     background: rgb(45, 149, 150);
@@ -75,7 +77,8 @@
                 </a>
 
             </td>
-        </tr>
+        </tr> 
+        <!--here-->
 
         <tr>
             <td colspan="3" style="padding: 20px">
