Update QREmail_en.html File

--- a/SharijhaAward.Api/wwwroot/QREmail_en.html
+++ b/SharijhaAward.Api/wwwroot/QREmail_en.html
@@ -82,7 +82,7 @@
 
         <tr>
             <td colspan="3" style="padding: 20px">
-                Please keep the attached QR code with this email, as it will be used to
+                Please keep the attached Bar code with this email, as it will be used to
                 access the event.<br />
             </td>
         </tr>
