1. Update CreateGroupInviteeCommandHandler 2. Update CreatePersonalInviteeCommandHandler 3. Update QREmail_ar.html and QREmail_en.html 4. Update DownloadTemplateAsPDF API in EventController

--- a/SharijhaAward.Api/wwwroot/QREmail_ar.html
+++ b/SharijhaAward.Api/wwwroot/QREmail_ar.html
@@ -11,10 +11,12 @@
         }
     </style>
 </head>
-<body style="font-family: Tajawal; background: rgb(250, 241, 236); ">
-    <table style="width:40%;  margin-left: auto;margin-right: auto;direction:rtl">
+<body style="font-family: Tajawal; background: rgb(250, 241, 236); min-height:1410px ">
+    <!--100% Here-->
+    <table id="1245555" ;style="width:40%;margin-left: auto;margin-right: auto;direction:rtl">
+        <!--100% Here-->
         <tr>
-            <td colspan="3">
+            <td colspan="3" id="14255">
                 <img src="cid:Email_HeaderImage" style="width: 100%; margin-top: 2%; margin-bottom: 2%" />
                 <img src="cid:LogosImage" style="width: 100%; margin-top: 2%; margin-bottom: 2%" />
             </td>
@@ -73,11 +75,11 @@
                               d="M6.07004 0.0400391C5.70001 0.0400391 5.40004 0.340008 5.40004 0.710039V2.05004H1.38004C0.639978 2.05004 0.0400391 2.64998 0.0400391 3.39004V12.1C0.0400391 12.8401 0.639977 13.44 1.38004 13.44H10.76C11.5001 13.44 12.1 12.8401 12.1 12.1V3.39004C12.1 2.64998 11.5001 2.05004 10.76 2.05004H6.74004V0.710039C6.74004 0.340008 6.44007 0.0400391 6.07004 0.0400391ZM6.74004 2.05004V6.5438H8.84323C9.29091 6.5438 9.51511 7.08506 9.19855 7.40162L6.5438 10.0564C6.28215 10.318 5.85793 10.318 5.59628 10.0564L2.94153 7.40162C2.62497 7.08506 2.84917 6.5438 3.29685 6.5438H5.40004V2.05004H6.74004Z"
                               fill="white" />
                     </svg>
-                    تحميل الرمز ك ملف PDF
+                    تحميل الايميل ك ملف PDF
                 </a>
 
             </td>
-        </tr> 
+        </tr>
         <!--here-->
 
         <tr>
@@ -107,8 +109,7 @@
             <td colspan="3"></td>
         </tr>
     </table>
-<table style="width: 40%; margin-left: auto; margin-right: auto;  background: url('cid:CaligraphyImage') no-repeat; background-position: center; background-size: contain">
-
-</table>
+    <table style="width: 40%; margin-left: auto; margin-right: auto;  background: url('cid:CaligraphyImage') no-repeat; background-position: center; background-size: contain">
+    </table>
 </body>
 </html>
