--- a/SharijhaAward.Api/wwwroot/QREmail_ar.html
+++ b/SharijhaAward.Api/wwwroot/QREmail_ar.html
@@ -11,9 +11,9 @@
         }
     </style>
 </head>
-<body style="font-family: Tajawal; background: rgb(250, 241, 236); min-height:1410px ">
+<body style="font-family: Tajawal; background: rgb(250, 241, 236); min-height: 1410px">
     <!--100% Here-->
-    <table id="1245555" ;style="width:40%;margin-left: auto;margin-right: auto;direction:rtl">
+    <table style="width: 40%; margin-left: auto; margin-right: auto; direction: rtl">
         <!--100% Here-->
         <tr>
             <td colspan="3" id="14255">
@@ -22,44 +22,44 @@
             </td>
         </tr>
         <tr>
-            <td colspan="3"> أهلا بك $NewInvitee.Name$.</td>
+            <td style="padding-right: 80px" colspan="3"> أهلا بك $NewInvitee.Name$.</td>
         </tr>
         <tr>
-            <td colspan="3">السلام عليكم و رحمة الله و بركاته.</td>
+            <td style="padding-right: 80px" colspan="3">السلام عليكم و رحمة الله و بركاته.</td>
         </tr>
         <tr>
-            <td colspan="3"></td>
+            <td style="padding-right: 80px" colspan="3"></td>
         </tr>
         <tr>
-            <td colspan="3">تم تأكيد تسجيلك لحضور: $EventEntity.ArabicName$</td>
+            <td style="padding-right: 80px" colspan="3">تم تأكيد تسجيلك لحضور: $EventEntity.ArabicName$</td>
         </tr>
         <tr>
-            <td colspan="3"></td>
+            <td style="padding-right: 80px" colspan="3"></td>
         </tr>
         <tr>
-            <td colspan="3">المقر:$EventEntity.ArabicLocation$</td>
+            <td style="padding-right: 80px" colspan="3">المقر: $EventEntity.ArabicLocation$</td>
         </tr>
         <tr>
-            <td colspan="3">اليوم: $EventEntity.StartDate.DayOfWeek$</td>
+            <td style="padding-right: 80px" colspan="3">اليوم: $EventEntity.StartDate.DayOfWeek$</td>
         </tr>
         <tr>
-            <td colspan="3">التاريخ: $EventEntity.StartDate.Date$</td>
+            <td style="padding-right: 80px" colspan="3">التاريخ: $EventEntity.StartDate.Date$</td>
         </tr>
         <tr>
-            <td colspan="3">الوقت: $EventEntity.StartDate.TimeOfDay$</td>
+            <td style="padding-right: 80px" colspan="3">الوقت: $EventEntity.StartDate.TimeOfDay$</td>
         </tr>
         <tr>
-            <td colspan="3"></td>
+            <td style="padding-right: 80px" colspan="3"></td>
         </tr>
         <tr>
-            <td colspan="3">
+            <td style="text-align: center" colspan="3">
                 <img src="cid:BarCodeImage" style="margin-top: 4%; margin-bottom: 4%; align-self: center" />
             </td>
         </tr>
 
         <!--here-->
         <tr id="delete">
-            <td style=" text-align: center; width: 50%;padding:15px" align="center">
+            <td style="padding-right: 80px" style=" text-align: center; width: 50%;padding:15px" align="center">
                 <a href="$DownloadBarCodeAPI$" download="BarCode.png" style="
                     background: rgb(45, 149, 150);
                     border-radius: 6px;
@@ -83,30 +83,30 @@
         <!--here-->
 
         <tr>
-            <td colspan="3" style="padding: 20px">
+            <td colspan="3" style="padding: 20px;padding-right:80px">
                 يرجى الاحتفاظ بالرمز المرفق مع هذا البريد، حيث سيتم استخدامه للدخول إلى الفعالية.<br />
             </td>
         </tr>
         <tr style="">
-            <td colspan="3">
+            <td style="padding-right: 80px"  colspan="3">
                 نتطلع إلى لقائكم قريبًا.
             </td>
         </tr>
         <tr>
-            <td colspan="3">
+            <td style="padding-right: 80px" colspan="3">
                 شاكرين لكم حسن تعاونكم معنا.
             </td>
         </tr>
         <tr>
-            <td colspan="3">
+            <td style="padding-right: 80px" colspan="3">
                 جائزة الشارقة للتفوق والتميز التربوي.
             </td>
         </tr>
         <tr>
-            <td colspan="3"></td>
+            <td style="padding-right: 80px" colspan="3"></td>
         </tr>
         <tr>
-            <td colspan="3"></td>
+            <td style="padding-right: 80px" colspan="3"></td>
         </tr>
     </table>
     <table style="width: 40%; margin-left: auto; margin-right: auto;  background: url('cid:CaligraphyImage') no-repeat; background-position: center; background-size: contain">
