--- a/SharijhaAward.Api/wwwroot/QREmail_en.html
+++ b/SharijhaAward.Api/wwwroot/QREmail_en.html
@@ -52,7 +52,7 @@
             <td colspan="3"></td>
         </tr>
         <tr>
-            <td colspan="3">
+            <td style="text-align: center" colspan="3">
                 <img src="cid:BarCodeImage" style="margin-top: 4%; margin-bottom: 4%; align-self: center" />
             </td>
         </tr>
