1. Delete QR Code From Comments inside The Create (Personal + Group) Invitee + Resend Email. 2. Edit Create (Personal + Group) Invitee Handlers. 3. Edit ExceptionMiddleware Class. 4. Combine The 2 Header's Images into One Image. 5. Edit QREmail_ar.html + QREmail_en.html Files.

--- a/SharijhaAward.Api/wwwroot/QREmail_en.html
+++ b/SharijhaAward.Api/wwwroot/QREmail_en.html
@@ -17,8 +17,9 @@
         <!--100% Here-->
         <tr>
             <td colspan="3" id="14255">
-                <img src="cid:Email_HeaderImage" style="width: 100%; margin-top: 2%; margin-bottom: 2%" />
-                <img src="cid:LogosImage" style="width: 100%; margin-top: 2%; margin-bottom: 2%" />
+                <img src="cid:HeaderImage" style="width: 100%; margin-top: 2%; margin-bottom: 2%" />
+                <!--<img src="cid:Email_HeaderImage" style="width: 100%; margin-top: 2%; margin-bottom: 2%" />
+                <img src="cid:LogosImage" style="width: 100%; margin-top: 2%; margin-bottom: 2%" />-->
             </td>
         </tr>
         <tr>
@@ -110,7 +111,7 @@
             <td colspan="3"></td>
         </tr>
     </table>
-    <table style="width: 40%; margin-left: auto; margin-right: auto;  background: url('cid:CaligraphyImage') no-repeat; background-position: center; background-size: contain">
-    </table>
+    <!--<table style="width: 40%; margin-left: auto; margin-right: auto;  background: url('cid:CaligraphyImage') no-repeat; background-position: center; background-size: contain">
+    </table>-->
 </body>
 </html>
