--- a/SharijhaAward.Api/wwwroot/QREmail_ar.html
+++ b/SharijhaAward.Api/wwwroot/QREmail_ar.html
@@ -17,8 +17,9 @@
         <!--100% Here-->
         <tr>
             <td colspan="3" id="14255">
-                <img src="cid:Email_HeaderImage" style="width: 100%; margin-top: 2%; margin-bottom: 2%" />
-                <img src="cid:LogosImage" style="width: 100%; margin-top: 2%; margin-bottom: 2%" />
+                <img src="cid:HeaderImage" style="width: 100%; margin-top: 2%; margin-bottom: 2%" />
+                <!--<img src="cid:Email_HeaderImage" style="width: 100%; margin-top: 2%; margin-bottom: 2%" />
+                <img src="cid:LogosImage" style="width: 100%; margin-top: 2%; margin-bottom: 2%" />-->
             </td>
         </tr>
         <tr>
@@ -109,7 +110,7 @@
             <td style="padding-right: 80px" colspan="3"></td>
         </tr>
     </table>
-    <table style="width: 40%; margin-left: auto; margin-right: auto;  background: url('cid:CaligraphyImage') no-repeat; background-position: center; background-size: contain">
-    </table>
+    <!--<table style="width: 40%; margin-left: auto; margin-right: auto;  background: url('cid:CaligraphyImage') no-repeat; background-position: center; background-size: contain">
+    </table>-->
 </body>
 </html>
