1. Edit CancelMeeting API in MeetingsController. 2. Edit SendEmailToUsersInMeeting API in MeetingsController. 3. Add New HTML Template For Sending Emails For Meeting (Cancel + Send) APIs.

--- a/SharijhaAward.Api/wwwroot/Send_Email_Template.html
+++ b/SharijhaAward.Api/wwwroot/Send_Email_Template.html
@@ -19,38 +19,26 @@
             <td colspan="3" id="14255">
                 <img src="cid:HeaderImage" style="width: 100%; margin-top: 2%; margin-bottom: 2%" />
                 <!--<img src="cid:Email_HeaderImage" style="width: 100%; margin-top: 2%; margin-bottom: 2%" />
-                <img src="cid:LogosImage" style="width: 100%; margin-top: 2%; margin-bottom: 2%" />-->
+            <img src="cid:LogosImage" style="width: 100%; margin-top: 2%; margin-bottom: 2%" />-->
             </td>
         </tr>
         <tr>
-            <td colspan="3"> $first</td>
+            <td colspan="3"> $FirstArabicLine$</td>
         </tr>
         <tr>
-            <td colspan="3">$second</td>
+            <td colspan="3">$SecondArabicLine$</td>
         </tr>
         <tr>
-            <td colspan="3">$third</td>
+            <td colspan="3">$ThirdArabicLine$</td>
         </tr>
         <tr>
-            <td colspan="3">$fourth</td>
+            <td colspan="3">$ForthArabicLine$</td>
         </tr>
         <tr>
-            <td colspan="3"></td>
+            <td colspan="3"> $FifthArabicLine$</td>
         </tr>
         <tr>
-            <td colspan="3"></td>
-        </tr>
-        <tr>
-            <td colspan="3"> $fifth</td>
-        </tr>
-        <tr>
-            <td colspan="3">$sixth</td>
-        </tr>
-        <tr>
-            <td colspan="3">$seventh</td>
-        </tr>
-        <tr>
-            <td colspan="3">$eighth</td>
+            <td colspan="3"> $SixthArabicLine$</td>
         </tr>
         <tr>
             <td colspan="3"></td>
@@ -58,7 +46,31 @@
         <tr>
             <td colspan="3"></td>
         </tr>
-        
+        <tr>
+            <td colspan="3">$FirstEnglishLine$</td>
+        </tr>
+        <tr>
+            <td colspan="3">$SecondEnglishLine$</td>
+        </tr>
+        <tr>
+            <td colspan="3">$ThirdEnglishLine$</td>
+        </tr>
+        <tr>
+            <td colspan="3">$ForthEnglishLine$</td>
+        </tr>
+        <tr>
+            <td colspan="3">$FifthEnglishLine$</td>
+        </tr>
+        <tr>
+            <td colspan="3">$SixthEnglisLine$</td>
+        </tr>
+        <tr>
+            <td colspan="3"></td>
+        </tr>
+        <tr>
+            <td colspan="3"></td>
+        </tr>
+
         <tr>
             <td colspan="3">
                 Thank you for your cooperation.
