1. Edit Database (Add New Columns (string? EnglishReasonOfCanceling, string? ArabicReasonOfCanceling) into Meetings Table). 2. Add Migration EditTable_Meetings_AddNewColumns_EnglishReasonOfCanceling_ArabicReasonOfCanceling. 3. Edit GetAllMeetings API in  MeetingsController. 4. Edit CancelMeeting API in MeetingsController. 5. Edit GetMeetingById API in MeetingsController. 6. Edit SendEmailToUsersInMeeting API in MeetingsController. 7. Edit Email Sender HTML Template. 8. Edit Database (Add New Table AndroidDevicesTokens). 9. Edit ChangeUserAccountLanguage API in SettingsController. 10. Edit Login API in AuthenticationController. 11. Edit CheckConfirmationCodeForSignUp API in AuthenticationController. 12. Edit SignUp API in AuthenticationController. 13. Edit Database (Edit Tables (Remove Column (string? lang) From Users Table and Add it To (UserTokens) Table)). 14. Add GetUsersByRolesIds API in RoleController. 15. Remove All Previous Migrations. 16. Add Migration InitialCreate. 17. Edit CreateNotification API in NotificationsController. 18. Edit DeleteNotification API in NotificationsController. 19. Edit MappingProfile Class. 20. Add GetAllNotificationsByFCM_Token API in NotificationsController.

--- a/SharijhaAward.Api/wwwroot/Send_Email_Template.html
+++ b/SharijhaAward.Api/wwwroot/Send_Email_Template.html
@@ -11,9 +11,9 @@
         }
     </style>
 </head>
-<body style="font-family: Tajawal; background: rgb(250, 241, 236); min-height: 1410px">
+<body style="font-family: Tajawal; background: rgb(250, 241, 236); min-height: 1410px";>
     <!--100% Here-->
-    <table style="width:40%;   margin-left: auto;margin-right: auto;direction:ltr">
+    <table style="width:40%;   margin-left: auto;margin-right: auto;direction:rtl">
         <!--100% Here-->
         <tr>
             <td colspan="3" id="14255">
@@ -47,6 +47,20 @@
             <td colspan="3"></td>
         </tr>
         <tr>
+            <td colspan="3">
+                شاكرين لكم حسن تعاونكم معنا.
+            </td>
+        </tr>
+        <tr>
+            <td colspan="3">
+                جائزة الشارقة للتفوق والتميز التربوي.
+            </td>
+        </tr>
+    </table>
+    <!--<table style="width: 40%; margin-left: auto; margin-right: auto;  background: url('cid:CaligraphyImage') no-repeat; background-position: center; background-size: contain">
+    </table>-->
+    <table style="width:40%;   margin-left: auto;margin-right: auto;direction:ltr">
+        <tr>
             <td colspan="3">$FirstEnglishLine$</td>
         </tr>
         <tr>
@@ -70,7 +84,6 @@
         <tr>
             <td colspan="3"></td>
         </tr>
-
         <tr>
             <td colspan="3">
                 Thank you for your cooperation.
@@ -81,14 +94,6 @@
                 Sharjah Award for Educational Excellence and Distinction
             </td>
         </tr>
-        <tr>
-            <td colspan="3"></td>
-        </tr>
-        <tr>
-            <td colspan="3"></td>
-        </tr>
     </table>
-    <!--<table style="width: 40%; margin-left: auto; margin-right: auto;  background: url('cid:CaligraphyImage') no-repeat; background-position: center; background-size: contain">
-    </table>-->
 </body>
 </html>
