Edit Meeting Table + APIs

--- a/SharijhaAward.Api/wwwroot/Send_Email_Template.html
+++ b/SharijhaAward.Api/wwwroot/Send_Email_Template.html
@@ -80,6 +80,13 @@
         <tr>
             <td colspan="3"></td>
         </tr>
+        <!--MeetingLink-->
+        <tr>
+            <td colspan="3">
+                $MeetingLink$
+            </td>
+        </tr>
+        <!--MeetingLink-->
         <tr>
             <td colspan="3">
                 Thank you for your cooperation.
